# ciid

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: main.yml
src/: encodings.rs  libraw.h  libraw.rs  main.rs
tests/: tests.rs
