[package]
name = "ciid"
version = "0.1.0"
authors = ["Pablo Sichert <mail@pablosichert.com>"]
description = """
`ciid` is a utility to derive a chronologically sortable, unique identifier for
images.

Usually, digital cameras and phones assign file names to images with a sequence
of only 4 digits (e.g. `IMG_1234.dng`). Those names will easily clash for any
sufficiently large amount of images.

`ciid` tackles this problem by deriving a hash from the image buffer.
Additionally to being able to derive an identifier that is very unlikely to
clash, this hash can later be used to check the integrity of the image content.

Some image processing programs update metadata of files (e.g inline JPEG-
previews, tags, modified date). The resulting `ciid` will be unaffected from
those changes, since only the actual image buffer is hashed. This has the nice
side-effect that proprietary camera RAW file formats and converted `.dng` files
will yield the same identifier most of the time.

Here's how a resulting identifier looks like:

```
0A1B2C3D4E-5F6G7H8J9K0M1N2P3Q4R5S6T7V8W9X0Y1Z2A3B4C5D6E7F8G9H00
└───┬────┘ └────────────────────────┬─────────────────────────┘
 timestamp                hash of image buffer
```

The first part of the identifier encodes the creation date of the image (a
50-bit timestamp with millisecond-precision), while the second part is a hash
(SHA-256) based on the contents of the image buffer.

The encoding uses
[Douglas Crackford's base32](https://www.crockford.com/base32.html) alphabet
with the following characters:

`0`, `1`, `2`, `3`, `4`, `5`, `6`, `7`, `8`, `9`, `A`, `B`, `C`, `D`, `E`, `F`,
`G`, `H`, `J`, `K`, `M`, `N`, `P`, `Q`, `R`, `S`, `T`, `V`, `W`, `X`, `Y`, `Z`.

Following criteria were considered when choosing the character set:

- encode information sufficiently compact (in this case 5 bits per character)
- have sensible alphabetical ordering on file systems (timestamps with a higher
  value should appear strictly after lower ones)
- no distinction between upper- und lowercase, avoiding issues on case
  insensitive file systems
- be safe to use in URLs"""
documentation = "https://github.com/pablosichert/ciid"
homepage = "https://github.com/pablosichert/ciid"
repository = "https://github.com/pablosichert/ciid"
readme = "README.md"
keywords = [
  "chronological",
  "identifier",
  "image",
  "sortable",
  "unique"
]
categories = [
  "command-line-utilities",
  "filesystem",
  "multimedia::encoding",
  "multimedia::images",
  "multimedia"
]
license = "MIT"
include = [
  "build.rs",
  "LICENSE",
  "README.md",
  "src"
]
edition = "2018"

[dependencies]
bindgen = "0.53.1"
chrono = "0.4.10"
clap = "2.33"
data-encoding = "2.1"
image = "0.23.0"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8.1"

[build-dependencies]
bindgen = "0.53.1"
