[package]
name = "ciid"
version = "0.2.2"
authors = ["Pablo Sichert <mail@pablosichert.com>"]
description = """
`ciid` is a utility to derive a chronologically sortable, unique identifier for
images.
"""
documentation = "https://github.com/pablosichert/ciid"
homepage = "https://github.com/pablosichert/ciid"
repository = "https://github.com/pablosichert/ciid"
readme = "README.md"
keywords = [
  "chronological",
  "identifier",
  "image",
  "sortable",
  "unique"
]
categories = [
  "command-line-utilities",
  "filesystem",
  "multimedia::encoding",
  "multimedia::images",
  "multimedia"
]
license = "MIT"
include = [
  "build.rs",
  "LICENSE",
  "README.md",
  "src"
]
edition = "2018"

[dependencies]
bindgen = "0.71.1"
chrono = "0.4.10"
clap = "2.33"
data-encoding = "2.1"
image = "0.23.0"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8.1"

[build-dependencies]
bindgen = "0.71.1"
